--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,6 +2,14 @@
 * Tasks
 ** Organization
    :LOGBOOK:
+   CLOCK: [2011-10-09 Sun 17:03]
+   CLOCK: [2011-10-09 Sun 16:25]--[2011-10-09 Sun 16:26] =>  0:01
+   CLOCK: [2011-10-09 Sun 16:22]--[2011-10-09 Sun 16:25] =>  0:03
+   CLOCK: [2011-10-09 Sun 16:18]--[2011-10-09 Sun 16:22] =>  0:04
+   CLOCK: [2011-10-09 Sun 16:17]--[2011-10-09 Sun 16:18] =>  0:01
+   CLOCK: [2011-10-09 Sun 15:04]--[2011-10-09 Sun 16:17] =>  1:13
+   CLOCK: [2011-10-09 Sun 11:36]--[2011-10-09 Sun 11:40] =>  0:04
+   CLOCK: [2011-10-09 Sun 11:35]--[2011-10-09 Sun 11:36] =>  0:01
    CLOCK: [2011-10-08 Sat 09:54]--[2011-10-08 Sat 09:55] =>  0:01
    CLOCK: [2011-09-29 Thu 13:57]--[2011-09-29 Thu 14:11] =>  0:14
    CLOCK: [2011-09-29 Thu 13:22]--[2011-09-29 Thu 13:29] =>  0:07
