--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -9,3 +9,22 @@
 
 下周主要思路顺应美元节奏考虑小仓做多美元空肥美。 
 目前肥美反弹力度普遍偏强... 即便做多美元也属于短线性质.
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  CLOCK: [2011-10-10 Mon 09:23]--[2011-10-10 Mon 10:14] =>  0:51
+  :END:
+[2011-10-10 Mon 09:23]
+美元(1hr)指数: 均线系统依然压制大部分价格，有零星穿越形成横盘，上周非农行情向上突破短线道士阻力，关注日内是否有向上反弹的交易机会 
+1hr分化: 首先排除日元长期短线混乱， 欧系货币分歧较大， 商品货币具备短线一致强势.
+
+>gbp >aud >eur chf cad jpy >>
+
+强弱方面， 欧元瑞郎加元 偏弱.
+
+日内可能考虑的交易有瑞郎. 小仓,注意瑞郎近期涨势虽然延续但是爬升速度越来越缓慢.
+
+瑞郎短线横盘走势，不容易看懂 . 横盘区间交易对待.
+
+挂单: 
+	0.9179 做多美瑞, 止损 0.9128 ,目标 0.9310
+	仓位: 0.3 手. 
