--- a/org/reading.org
+++ b/org/reading.org
@@ -4,4 +4,13 @@
 ** 《C programming language》
 ** 《C++ programming language》
 ** 《编译原理极其实践》
-
+   - 第一章 概论 [0/4]
+     - [ ] 为什么要使用编译器
+     - [ ] 与编译器相关的程序
+     - [ ] 编译步骤
+     - [ ] 编译器中主要的数据结构
+     - [ ] 编译器结构中其他问题
+     - [ ] 自举与移植
+     - [ ] TINY 样本语言与编译器
+   - 第二章 词法分析
+      
