--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,7 +2,10 @@
 * Tasks
 ** Organization
    :LOGBOOK:
-   CLOCK: [2011-10-09 Sun 17:03]
+   CLOCK: [2011-10-11 Tue 10:05]
+   CLOCK: [2011-10-10 Mon 10:14]--[2011-10-11 Tue 08:56] => 22:42
+   CLOCK: [2011-10-10 Mon 09:17]--[2011-10-10 Mon 09:23] =>  0:06
+   CLOCK: [2011-10-09 Sun 17:03]--[2011-10-10 Mon 09:17] => 16:14
    CLOCK: [2011-10-09 Sun 16:25]--[2011-10-09 Sun 16:26] =>  0:01
    CLOCK: [2011-10-09 Sun 16:22]--[2011-10-09 Sun 16:25] =>  0:03
    CLOCK: [2011-10-09 Sun 16:18]--[2011-10-09 Sun 16:22] =>  0:04
