--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -1,3 +1,9 @@
+| currency |    sl. |    en. |    sp. | b/s | lots | point  | dollars |
+|----------+--------+--------+--------+-----+------+--------+---------|
+| usdchf   | 0.9130 | 0.9182 | 0.9310 | s   |  0.3 | #ERROR | -170.87 |
+|          |        |        |        |     |      | #ERROR |         |
+#+TBLFM: $7=(if (< $8 0) (round $2));N
+  
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
   :LOGBOOK:
   CLOCK: [2011-10-09 Sun 16:26]--[2011-10-09 Sun 17:03] =>  0:37
@@ -33,3 +39,19 @@
 
 
 
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  CLOCK: [2011-10-11 Tue 08:56]--[2011-10-11 Tue 10:05] =>  1:09
+  :END:
+[2011-10-11 Tue 08:56]
+
+美元(day)指数: 依然是涨势,上周经历连续三天的下跌之后，非农提振，收了一跟下影线偏常的k线              
+美元(4hr)指数: 进入明显的向下转换的行情当中，目前正面临77.26强支撑.                      
+美元(1hr)指数: 短线跌势明显. 日内主要考虑做多非美做空美元.                            
+
+4hr分化: 4小时分分处于向上转换的行情这点和美元指数一致.                           
+1hr分化: 除了日元意外其他货币主客观方向一致向上.                               
+
+日内重点关注 澳元走势. 计划挂单
+
+0.9930  sl 0.9874   目标 1.0130  仓位小仓 0.3 手.
