--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -1,8 +1,8 @@
-| currency |    sl. |    en. |    sp. | b/s | lots | point  | dollars |
-|----------+--------+--------+--------+-----+------+--------+---------|
-| usdchf   | 0.9130 | 0.9182 | 0.9310 | s   |  0.3 | #ERROR | -170.87 |
-|          |        |        |        |     |      | #ERROR |         |
-#+TBLFM: $7=(if (< $8 0) (round $2));N
+| currency |    sl. |    en. |    sp. | b/s | lots | point                |  profit |
+|----------+--------+--------+--------+-----+------+----------------------+---------|
+| usdchf   | 0.9130 | 0.9182 | 0.9310 | s   |  0.3 | 0.005199999999999982 | -170.87 |
+|          |        |        |        |     |      | #ERROR               |         |
+#+TBLFM: $7='(if (< $8 0) (- $3 $2));N
   
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
   :LOGBOOK:
@@ -35,8 +35,6 @@
 挂单: 
 	0.9179 做多美瑞, 止损 0.9128 ,目标 0.9310
 	仓位: 0.3 手. 
-
-
 
 
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
