--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -21,25 +21,17 @@
   1. 通过mako 把opsfree 里面的数据 + HOSTS/nodes.cf GROUPS/nodes.cf
   2. 人来编辑模板，实现机器和人可以coedit HOSTS/nodes.cf GROUPS/nodes.cf
 
-***** STARTED 调研mako .  目的 opsfree + json 接口 + mako 模板生成 nodes.cf
+***** STARTED 调研mako .  目的 opsfree + json 接口 + mako 模板生成 nodes.cf [1/2]
       :LOGBOOK:
+      CLOCK: [2011-10-11 Tue 11:23]
       CLOCK: [2011-09-29 Thu 14:12]--[2011-09-29 Thu 14:15] =>  0:03
       :END:
-      - mako 
+      - [X] 给mako 打包
+      - [ ] opsfree + json 的库.
+      - [ ] mako 库
 
-****** NEXT 给mako 打包
-       :LOGBOOK:
-       CLOCK: [2011-09-29 Thu 14:15]--[2011-09-29 Thu 14:20] =>  0:05
-       :END:
-
-****** STARTED mako example
-       :LOGBOOK:
-       CLOCK: [2011-09-29 Thu 15:42]--[2011-09-29 Thu 16:28] =>  0:46
-       CLOCK: [2011-09-29 Thu 14:20]--[2011-09-29 Thu 14:30] =>  0:10
-       :END:
-
-
-****** STARTED 配置 yasnippet & flymake
+       
+***** STARTED 配置 yasnippet & flymake
        :LOGBOOK:
        CLOCK: [2011-10-08 Sat 09:58]--[2011-10-08 Sat 11:30] =>  1:32
        CLOCK: [2011-10-08 Sat 09:55]--[2011-10-08 Sat 09:56] =>  0:01
@@ -47,6 +39,7 @@
        :END:
 
        如果需要安装 python-mode , 先搞定 auto-complete
+       目前flymake 特别的慢
 
 *** gemclient 部署
 **** 确定 gemclient 的部署步骤.
