--- a/org/refile.org
+++ b/org/refile.org
@@ -45,3 +45,12 @@ https://shares.alibaba.com/shares/user/clientPassWord.action?encryptUserName=D94
 [2011-10-10 一 07:26]
 [[id:eb155a82-92b2-4f25-a3c6-0304591af2f9][Organization]]
    /sudo::/etc/hosts
+* TODO procmail 规则有问题
+  :LOGBOOK:
+  CLOCK: [2011-10-11 Tue 14:26]--[2011-10-11 Tue 14:28] =>  0:02
+  :END:
+[2011-10-11 Tue 14:26]
+[[gnus:Greetings#201101240409.p0O4331R005555@nagios.taobao.ali.com][Email from it@taobao.com: 【006617/不平/陆研】给您送来了]]
+
+	- 当前情况是大部分的邮件都命中了 Junk 的规则. 怀疑是规则信息有问题.
+	- 需要解决的问题. 如何建立一个空的 bincmap.
