--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -21,14 +21,19 @@
   1. 通过mako 把opsfree 里面的数据 + HOSTS/nodes.cf GROUPS/nodes.cf
   2. 人来编辑模板，实现机器和人可以coedit HOSTS/nodes.cf GROUPS/nodes.cf
 
-***** STARTED 调研mako .  目的 opsfree + json 接口 + mako 模板生成 nodes.cf [1/2]
+***** STARTED 调研mako .  目的 opsfree + json 接口 + mako 模板生成 nodes.cf [1/3]
       :LOGBOOK:
-      CLOCK: [2011-10-11 Tue 11:23]
+      CLOCK: [2011-10-11 Tue 14:28]
+      CLOCK: [2011-10-11 Tue 11:23]--[2011-10-11 Tue 14:26] =>  3:03
       CLOCK: [2011-09-29 Thu 14:12]--[2011-09-29 Thu 14:15] =>  0:03
       :END:
       - [X] 给mako 打包
       - [ ] opsfree + json 的库.
+	http://tops.corp.taobao.com/2011/07/sitebase-api-%E6%8F%8F%E8%BF%B0/
       - [ ] mako 库
+      - [ ] 程序命令行界面.
+	cf_out.py --template <template_file> 
+	
 
        
 ***** STARTED 配置 yasnippet & flymake
