--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,7 +2,8 @@
 * Tasks
 ** Organization
    :LOGBOOK:
-   CLOCK: [2011-10-11 Tue 10:05]
+   CLOCK: [2011-10-12 三 08:52]
+   CLOCK: [2011-10-11 Tue 10:05]--[2011-10-12 三 07:50] => 21:45
    CLOCK: [2011-10-10 Mon 10:14]--[2011-10-11 Tue 08:56] => 22:42
    CLOCK: [2011-10-10 Mon 09:17]--[2011-10-10 Mon 09:23] =>  0:06
    CLOCK: [2011-10-09 Sun 17:03]--[2011-10-10 Mon 09:17] => 16:14
