--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -53,3 +53,13 @@
 日内重点关注 澳元走势. 计划挂单
 
 0.9930  sl 0.9874   目标 1.0130  仓位小仓 0.3 手.
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  CLOCK: [2011-10-12 三 07:50]--[2011-10-12 三 08:52] =>  1:02
+  :END:
+[2011-10-12 三 07:50]
+
+美元(1hr)指数: 经过昨天的反复震荡. 今天行情变奏有明显反复行的中继形态.
+经过昨日震荡欧元较强，今天日内首选欧元.
+
+预期进场点 1.3563 . 50 点突破止损.  上方在4小时关键阻力附近. 仓位 0.5 小仓.
