--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -23,7 +23,7 @@
 
 ***** STARTED 调研mako .  目的 opsfree + json 接口 + mako 模板生成 nodes.cf [1/3]
       :LOGBOOK:
-      CLOCK: [2011-10-11 Tue 14:28]
+      CLOCK: [2011-10-11 Tue 14:28]--[2011-10-12 三 07:50] => 17:22
       CLOCK: [2011-10-11 Tue 11:23]--[2011-10-11 Tue 14:26] =>  3:03
       CLOCK: [2011-09-29 Thu 14:12]--[2011-09-29 Thu 14:15] =>  0:03
       :END:
