--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -14,6 +14,7 @@
 
 **** STARTED opsfree 和 gemstone 信息交互。
      :LOGBOOK:
+     CLOCK: [2011-10-12 Wed 10:16]
      CLOCK: [2011-09-29 Thu 14:11]--[2011-09-29 Thu 14:12] =>  0:01
      CLOCK: [2011-09-20 Tue 09:52]--[2011-09-20 Tue 09:57] =>  0:05
      :END:
@@ -21,10 +22,9 @@
   1. 通过mako 把opsfree 里面的数据 + HOSTS/nodes.cf GROUPS/nodes.cf
   2. 人来编辑模板，实现机器和人可以coedit HOSTS/nodes.cf GROUPS/nodes.cf
 
-     是否多个template.
-	patten1.tmpl
-	patten2.tmpl
-        patten3.tmpl
+     是否多个template. (No 不分片)
+     GROUP1
+	INCLUDE opsfree_nodes_compress('group1_query_string_in_opsfree')
 
 ***** STARTED 调研mako .  目的 opsfree + json 接口 + mako 模板生成 nodes.cf [1/3]
       :LOGBOOK:
