--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -62,3 +62,7 @@
 经过昨日震荡欧元较强，今天日内首选欧元.
 
 预期进场点 1.3563 . 50 点突破止损.  上方在4小时关键阻力附近. 仓位 0.5 小仓.
+行情已经突破。 先按照旗形挂单，后面按照三角形挂单。但是都没有挂单成功. 行情突破后
+撤单.
+	问题1. 为什么后来选择了欧元没有坚持选择澳元. 因为早上澳元发生了较大力度
+	的下跌.所以没有继续跟进
