--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -14,7 +14,8 @@
 
 **** STARTED opsfree 和 gemstone 信息交互。
      :LOGBOOK:
-     CLOCK: [2011-10-12 Wed 14:40]
+     CLOCK: [2011-10-12 Wed 14:49]
+     CLOCK: [2011-10-12 Wed 14:40]--[2011-10-12 Wed 14:48] =>  0:08
      CLOCK: [2011-10-12 Wed 10:16]--[2011-10-12 Wed 14:39] =>  4:23
      CLOCK: [2011-09-29 Thu 14:11]--[2011-09-29 Thu 14:12] =>  0:01
      CLOCK: [2011-09-20 Tue 09:52]--[2011-09-20 Tue 09:57] =>  0:05
