--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -1,7 +1,8 @@
-| currency |    sl. |    en. |    sp. | b/s | lots | point                |  profit |
-|----------+--------+--------+--------+-----+------+----------------------+---------|
-| usdchf   | 0.9130 | 0.9182 | 0.9310 | s   |  0.3 | 0.005199999999999982 | -170.87 |
-|          |        |        |        |     |      | #ERROR               |         |
+| currency |    sl. |    en. |    sp. | b/s | lots | point  |  profit |
+|----------+--------+--------+--------+-----+------+--------+---------|
+| usdchf   | 0.9130 | 0.9182 | 0.9310 | s   |  0.3 | 51.9   | -170.87 |
+| audusd   | 0.9936 |        |        |     |      |        |         |
+|          |        |        |        |     |      | #ERROR |         |
 #+TBLFM: $7='(if (< $8 0) (- $3 $2));N
   
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
@@ -49,7 +50,8 @@
 4hr分化: 4小时分分处于向上转换的行情这点和美元指数一致.                           
 1hr分化: 除了日元意外其他货币主客观方向一致向上.                               
 
-日内重点关注 澳元走势. 计划挂单
+日内重点关注 澳元走势. 计划挂单. 已经进场但是，早盘发现行情走弱迹象，中继变节奏。
+手工出场
 
 0.9930  sl 0.9874   目标 1.0130  仓位小仓 0.3 手.
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
