--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -68,3 +68,14 @@
 撤单.
 	问题1. 为什么后来选择了欧元没有坚持选择澳元. 因为早上澳元发生了较大力度
 	的下跌.所以没有继续跟进
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  CLOCK: [2011-10-13 Thu 09:37]
+  :END:
+[2011-10-13 Thu 09:37]
+
+
+美元(day)指数: 客观均线中的55日均线支撑了汇价，但是目前来看美元指数高位主主交替.                 
+美元(4hr)指数: 均线系统已经对指数形成压制,接下来一周美元指数进入下跌趋势.                     
+美元(1hr)指数: 美元指数依然处于下跌节奏当中，缝次空美元                               
+
