--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -79,3 +79,6 @@
 美元(4hr)指数: 均线系统已经对指数形成压制,接下来一周美元指数进入下跌趋势.                     
 美元(1hr)指数: 美元指数依然处于下跌节奏当中，缝次空美元                               
 
+4hr分化: 一致性较好除了日元                                          
+1hr分化: 一致性较好除了日元                                          
+
