--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -70,7 +70,7 @@
 	的下跌.所以没有继续跟进
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
   :LOGBOOK:
-  CLOCK: [2011-10-13 Thu 09:37]
+  CLOCK: [2011-10-13 Thu 09:37]--[2011-10-13 Thu 14:20] =>  4:43
   :END:
 [2011-10-13 Thu 09:37]
 
@@ -82,3 +82,5 @@
 4hr分化: 一致性较好除了日元                                          
 1hr分化: 一致性较好除了日元                                          
 
+CAD: 4小时上有强阻力不考虑做空.
+有限选择 eur / chf
