--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -14,7 +14,7 @@
 
 **** STARTED opsfree 和 gemstone 信息交互。
      :LOGBOOK:
-     CLOCK: [2011-10-12 Wed 14:49]
+     CLOCK: [2011-10-12 Wed 14:49]--[2011-10-13 Thu 09:37] => 18:48
      CLOCK: [2011-10-12 Wed 14:40]--[2011-10-12 Wed 14:48] =>  0:08
      CLOCK: [2011-10-12 Wed 10:16]--[2011-10-12 Wed 14:39] =>  4:23
      CLOCK: [2011-09-29 Thu 14:11]--[2011-09-29 Thu 14:12] =>  0:01
@@ -34,7 +34,7 @@
       CLOCK: [2011-10-11 Tue 11:23]--[2011-10-11 Tue 14:26] =>  3:03
       CLOCK: [2011-09-29 Thu 14:12]--[2011-09-29 Thu 14:15] =>  0:03
       :END:
-      - [X] 给mako 打包
+      - [X] 给mako 打包 
       - [ ] opsfree + json 的库.
 	http://tops.corp.taobao.com/2011/07/sitebase-api-%E6%8F%8F%E8%BF%B0/
       - [ ] mako 库
