--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -84,3 +84,56 @@
 
 CAD: 4小时上有强阻力不考虑做空.
 有限选择 eur / chf
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  CLOCK: [2011-10-14 Fri 11:52]--[2011-10-14 Fri 12:23] =>  0:31
+  :END:
+[2011-10-14 Fri 11:52]
+
+*美元指数分析
+   ---------------usdx---------------------
+时间及别  | 1月 | 1周 | 1日 | 4时 | 1时 | 1刻 | 
+   ----------------------------------------
+ 客 : |[ 下 ]|[ 转 ]|[ 上 ]|[ 下 ]|[ 下 ]|[ NA ]
+ 主 : |[ 上 ]|[ 星 ]|[ 星 ]|[ 下 ]|[ 下 ]|[ NA ]
+   ----------------------------------------
+
+*结论
+
+美元(day)指数: 客观均线中的55日均线支撑了汇价，但是目前来看美元指数高位主主交替.                 
+美元(4hr)指数: 均线系统已经对指数形成压制,接下来一周美元指数进入下跌趋势.                     
+美元(1hr)指数: 均线系统微微破坏，但是趋势不改向下。继续空美元多非美                         
+美元(15m)指数:                                                    
+
+
+*货币分化表
+ 
+  ------------------------------------
+4hr:客:[eur:   上  ] [gbp:   上  ] [chf:   上  ] [aud:   上  ] [cad:   上  ] [jpy:   横  ]  
+4hr:主:[eur:   上  ] [gbp:   上  ] [chf:   上  ] [aud:   上  ] [cad:   上  ] [jpy:   星  ]  
+4hr:规:[eur:   zc  ] [gbp:   zc  ] [chf:   cc  ] [aud:   zc  ] [cad:   cc  ] [jpy:   fc  ]  
+4hr:阻:[eur:1.3943 ] [gbp:1.6098 ] [chf:0.8685 ] [aud:1.0418 ] [cad:1.0135 ] [jpy:0.0000 ]  
+4hr:撑:[eur:1.3557 ] [gbp:1.5537 ] [chf:0.9127 ] [aud:1.0043 ] [cad:1.0337 ] [jpy:0.0000 ]  
+  ------------------------------------
+1hr:客:[eur:   横  ] [gbp:   横  ] [chf:   横  ] [aud:   上  ] [cad:   横  ] [jpy:   横  ]  
+1hr:主:[eur:   上  ] [gbp:   上  ] [chf:   上  ] [aud:   上  ] [cad:   星  ] [jpy:   上  ]  
+1hr:规:[eur:   cc  ] [gbp:   cc  ] [chf:   nc  ] [aud:   zc  ] [cad:   nc  ] [jpy:   nc  ]  
+1hr:阻:[eur:1.3943 ] [gbp:0.0000 ] [chf:0.0000 ] [aud:9.0000 ] [cad:1.0135 ] [jpy:76.1600 ]  
+1hr:撑:[eur:1.3553 ] [gbp:1.5655 ] [chf:0.9024 ] [aud:0.9802 ] [cad:1.0261 ] [jpy:76.8500 ]  
+  ------------------------------------
+15m:客:[eur:   NA  ] [gbp:   NA  ] [chf:   NA  ] [aud:   NA  ] [cad:   NA  ] [jpy:   NA  ]  
+15m:主:[eur:   NA  ] [gbp:   NA  ] [chf:   NA  ] [aud:   NA  ] [cad:   NA  ] [jpy:   NA  ]  
+15m:规:[eur:   NA  ] [gbp:   NA  ] [chf:   NA  ] [aud:   NA  ] [cad:   NA  ] [jpy:   NA  ]  
+xb15m:阻:[eur:1.3479 ] [gbp:1.5609 ] [chf:0.8950 ] [aud:0.9837 ] [cad:1.0279 ] [jpy:0.0000 ]  
+15m:撑:[eur:1.3635 ] [gbp:1.5524 ] [chf:0.9021 ] [aud:0.0000 ] [cad:0.0000 ] [jpy:0.0000 ] 
+
+*分化结论
+
+4hr分化: 一致性较好除了日元                                          
+1hr分化: 普遍进入震荡行情. 唯独澳元小时图均线系统依托良好                          
+15m分化:                                                    
+
+
+>aud jpy >eur gbp chf >cad >>
+
+澳元： 注意三角形和旗型机会. 下午3点的时候关注三角形机会.
