--- a/org/reading.org
+++ b/org/reading.org
@@ -1,6 +1,32 @@
 * 书目
 ** 《深入理解计算机系统》
-*** chapter 13 : 并发编程.
+   - chapter 11 : 系统级 I/O [/]
+     - [ ] Unix I/O
+     - [ ] 打开和关闭文件
+     - [ ] 读和写文件
+     - [ ] 用Rio 包进行健壮的读和写
+     - [ ] 读取文件元数据
+     - [ ] 共享文件
+     - [ ] I/O 重定向
+     - [ ] 标准 I/O
+     - [ ] 综合: 我该使用哪些 I/O 函数?
+     - [ ] 小结
+   - chapter 12 : 网络编程。 [0/6]
+     - [ ] 客户端-服务器编程模型
+     - [ ] 网络
+     - [ ] 全球IP因特网
+     - [ ] WEB 服务器
+     - [ ] 综合: Tiny Web 服务器
+     - [ ] 小结
+   - chapter 13 : 并发编程. [0/7]
+     - [ ] 基于进程的并发编程
+     - [ ] 基于 I/O 多路复用的并发编程
+     - [ ] 多线程程序中的共享变量
+     - [ ] 用信号量同步线程
+     - [ ] 综合： 基于预线程化的并发服务器
+     - [ ] 其他并发问题
+     - [ ] 小结
+    
 ** 《C programming language》
 ** 《C++ programming language》
 ** 《编译原理极其实践》
@@ -13,4 +39,19 @@
      - [ ] 自举与移植
      - [ ] TINY 样本语言与编译器
    - 第二章 词法分析
-      
+     
+** 旅行人生最有价值的投资   - Jim Rogers
+   - 第一篇 从顿琴到东京 [0/10]
+     - [ ] 飞向苏联
+     - [ ] 纽约
+     - [ ] 穿越欧洲
+     - [ ] 林茨
+     - [ ] 中欧
+     - [ ] 前往伊斯坦布尔
+     - [ ] 古老的土耳其斯坦
+     - [ ] 进入中国
+     - [ ] 西安
+     - [ ] 从西安到北京
+   - 第二篇 从东京到顿琴 [0/0]
+     - [ ] 日本: 值得投资的国家
+     - [ ] 在世界的边缘
