--- a/org/reading.org
+++ b/org/reading.org
@@ -55,3 +55,14 @@
    - 第二篇 从东京到顿琴 [0/0]
      - [ ] 日本: 值得投资的国家
      - [ ] 在世界的边缘
+
+** 《次第花开》  - 希阿荣博堪步 著
+   - 第一部 珍宝人生 [1/3]
+     - [X] 珍宝人生
+       关于无我的探讨. 不相信自己的大脑,其实只是一种gtd 方面西方人的认知
+       在佛教当中不相信自己的大脑其实就是一种无我的态度. gtd 方面将一切都
+       交给时间管理系统，让自己内心得到安静， 通过一种时间管理的方法来求解脱.
+       能够让自己跳出来作为一种旁观者的态度来处理周遭的事情. 
+     - [ ] 安乐
+     - [ ] 从玉树说起
+       
