--- a/org/reading.org
+++ b/org/reading.org
@@ -59,10 +59,18 @@
 ** 《次第花开》  - 希阿荣博堪步 著
    - 第一部 珍宝人生 [1/3]
      - [X] 珍宝人生
-       关于无我的探讨. 不相信自己的大脑,其实只是一种gtd 方面西方人的认知
-       在佛教当中不相信自己的大脑其实就是一种无我的态度. gtd 方面将一切都
-       交给时间管理系统，让自己内心得到安静， 通过一种时间管理的方法来求解脱.
-       能够让自己跳出来作为一种旁观者的态度来处理周遭的事情. 
+       关于无我的探讨. 不相信自己的大脑,其实只是一种gtd 方面西方人的客观描述
+       在佛教当中不相信自己的大脑其实就是一种关于无我的态度的哲学. gtd 方面将
+       一切都交给时间管理系统，让自己内心得到安静， 通过一种时间管理的方法来求解
+       脱.能够让自己跳出来作为一种旁观者的态度来处理周遭的事情. 
+       
+       关于认识痛苦. 静静的观察痛苦.
+       痛苦源于我执和法执.
+       
+       解.脱.
+         解: 解开，分开，融化,调和，处理.
+         脱: 离开， 取下，除去 等含义.
+       字面上的含义就是解后脱离开的一个过程.  人生修行安乐的源泉.
      - [ ] 安乐
      - [ ] 从玉树说起
        
