--- a/org/reading.org
+++ b/org/reading.org
@@ -40,7 +40,7 @@
      - [ ] TINY 样本语言与编译器
    - 第二章 词法分析
      
-** 旅行人生最有价值的投资   - Jim Rogers
+** 《旅行人生最有价值的投资》   - Jim Rogers
    - 第一篇 从顿琴到东京 [0/10]
      - [ ] 飞向苏联
      - [ ] 纽约
@@ -55,6 +55,23 @@
    - 第二篇 从东京到顿琴 [0/0]
      - [ ] 日本: 值得投资的国家
      - [ ] 在世界的边缘
+     - [ ] 穿越蛮荒之地
+     - [ ] 西伯利亚
+     - [ ] 乌兰乌德，济马和坎斯克
+     - [ ] 新西伯利亚及其以西
+     - [ ] 莫斯科
+     - [ ] 前往爱尔兰
+   - 第三篇 从顿琴到好望角 [/]
+     - [ ] 非洲： 征服撒哈啦
+     - [ ] 撒哈啦以南
+     - [ ] 顺河而下
+     - [ ] 愤怒的羔羊
+     - [ ] 逃亡
+     - [ ] 赞比亚和大津巴布韦
+     - [ ] 博次瓦纳
+     - [ ] 南非
+   - 第四篇 绕过和恩角
+     - [ ]
 
 ** 《次第花开》  - 希阿荣博堪步 著
    - 第一部 珍宝人生 [1/3]
