--- a/org/reading.org
+++ b/org/reading.org
@@ -1,6 +1,9 @@
 * 书目
 ** 《深入理解计算机系统》
-   - chapter 11 : 系统级 I/O [/]
+   - chapter 1 计算机系统漫游 [/]
+     - [ ] 信息就是位 + 上下文
+     - [ ]
+   - chapter 11 : 系统级 I/O [0/10]
      - [ ] Unix I/O
      - [ ] 打开和关闭文件
      - [ ] 读和写文件
@@ -71,7 +74,15 @@
      - [ ] 博次瓦纳
      - [ ] 南非
    - 第四篇 绕过和恩角
-     - [ ]
+     - [ ] 澳大利亚的长途跋涉
+     - [ ] 世界尽头
+     - [ ] 布宜诺斯艾利斯
+     - [ ] 智力与复活节岛
+     - [ ] 走进印加
+     - [ ] 沿着达尔文的足迹
+     - [ ] 达里恩地带
+     - [ ] 巴拿马运河
+     - [ ] 回家
 
 ** 《次第花开》  - 希阿荣博堪步 著
    - 第一部 珍宝人生 [1/3]
