--- a/org/reading.org
+++ b/org/reading.org
@@ -1,8 +1,120 @@
 * 书目
 ** 《深入理解计算机系统》
-   - chapter 1 计算机系统漫游 [/]
+   - chapter 1 计算机系统漫游 [0/10]
      - [ ] 信息就是位 + 上下文
-     - [ ]
+     - [ ] 程序被其他程序翻译成不同的格式
+     - [ ] 了解编译系统如何工作是大有益处的
+     - [ ] 处理器读并解释存储在存储器中的指令
+     - [ ] 高速缓存
+     - [ ] 形成层次结构的存储设备
+     - [ ] 操作系统管理硬件
+     - [ ] 利用网络系统和其他系统通信
+     - [ ] 下一步
+     - [ ] 小结
+   - chapter 2 信息的表示和处理 [/]
+     - [ ] 信息存储
+     - [ ] 整数表示
+     - [ ] 整数运算
+     - [ ] 浮点
+     - [ ] 小结
+   - chapter 3 程序的机器级表示 [/]
+     - [ ] 历史观点 
+     - [ ] 程序编码
+     - [ ] 数据格式
+     - [ ] 访问信息
+     - [ ] 算数和逻辑操作
+     - [ ] 控制
+     - [ ] 过程
+     - [ ] 数组分配和访问
+     - [ ] 异类的数据结构
+     - [ ] 对齐(alignment)
+     - [ ] 综合: 理解指针
+     - [ ] 现实生活: 使用GDB 调试器
+     - [ ] 存储器的越界和缓冲区溢出
+     - [ ] *浮点代码
+     - [ ] *在C中嵌入汇编代码
+     - [ ] 小结
+   - chapter 4 处理器体系结构
+     - [ ] Y86 指令集体系结构
+     - [ ] 逻辑设计和硬件控制语言 HCL
+     - [ ] Y86的顺序(sequential) 实现
+     - [ ] 流水线的通用原理
+     - [ ] Y86 的流水线实现
+     - [ ] 小结
+   - chapter 5 优化程序性能
+     - [ ] 优化编译器的能力和局限性
+     - [ ] 表示程序性能
+     - [ ] 程序示例
+     - [ ] 消除循环的的低效率
+     - [ ] 减少过程调用
+     - [ ] 消除不必要的存储器引用
+     - [ ] 理解现代处理器
+     - [ ] 降低循环开销
+     - [ ] 转换到指针代码
+     - [ ] 提高并行性
+     - [ ] 综合： 优化合并 (Combing) 代码的效果小结
+     - [ ] 理解存储器性能
+     - [ ] 现实生活: 性能提高技术
+     - [ ] 确认和消除性能瓶颈
+     - [ ] 小结
+   - chapter 6 存储器层次结构 [/]
+     - [ ] 存储技术
+     - [ ] 局限性
+     - [ ] 存储器层次结构
+     - [ ] 高数缓存存储器
+     - [ ] 编写高速缓存友好的代码
+     - [ ] 综合: 高速缓存对程序性能的影响
+     - [ ] 综合: 利用程序中的局限性
+     - [ ] 小结
+   - chapter 7 链接 [/]
+     - [ ] 编译器驱动程序
+     - [ ] 静态链接
+     - [ ] 目标文件
+     - [ ] 可重定位目标文件
+     - [ ] 符号和符号表
+     - [ ] 符号解析
+     - [ ] 重定位
+     - [ ] 可执行目标文件
+     - [ ] 加载可执行目标文件
+     - [ ] 动态链接共享库
+     - [ ] 从应用程序中加载和链接共享库
+     - [ ] * 与位置无关的代码(PIC)
+     - [ ] 处理目标文件的工具
+     - [ ] 小结
+   - chapter 8 异常控制流[/]
+     - [ ] 异常
+     - [ ] 进程
+     - [ ] 系统调用和错误处理
+     - [ ] 进程控制
+     - [ ] 信号
+     - [ ] 非本地跳转
+     - [ ] 操作进程的工具
+     - [ ] 小结
+   - chapter 9 测量程序执行时间 [/]
+     - [ ] 计算机系统上的时间流
+     - [ ] 通过间隔计数 (interval counting) 来测量时间
+     - [ ] 周期计数器
+     - [ ] 用周期计数器来测量程序执行时间
+     - [ ] 基于 gettimeofday 函数的测量
+     - [ ] 综合: 一个实验协议
+     - [ ] 展望未来
+     - [ ] 现实生活: K次最优测量方法
+     - [ ] 得到的经验教训
+     - [ ] 小结
+   - chapter 10 虚拟存储器 [/]
+     - [ ] 物理和虚拟寻址
+     - [ ] 地址空间
+     - [ ] 虚拟存储器作为缓存的工具
+     - [ ] 虚拟存储器作为存储器管理的工具
+     - [ ] 虚拟存储器作为存储器保护的工具
+     - [ ] 地址翻译
+     - [ ] 案例研究: Pentium/Linux 存储器系统
+     - [ ] 存储器映射
+     - [ ] 动态存储器分配
+     - [ ] 垃圾收集
+     - [ ] C语言中常见的与存储器有关的错误
+     - [ ] 额要重述一些有关虚拟存储器的关键任务
+     - [ ] 小结
    - chapter 11 : 系统级 I/O [0/10]
      - [ ] Unix I/O
      - [ ] 打开和关闭文件
