--- a/org/reading.org
+++ b/org/reading.org
@@ -11,13 +11,13 @@
      - [ ] 利用网络系统和其他系统通信
      - [ ] 下一步
      - [ ] 小结
-   - chapter 2 信息的表示和处理 [/]
+   - chapter 2 信息的表示和处理 [0/5]
      - [ ] 信息存储
      - [ ] 整数表示
      - [ ] 整数运算
      - [ ] 浮点
      - [ ] 小结
-   - chapter 3 程序的机器级表示 [/]
+   - chapter 3 程序的机器级表示 [0/16]
      - [ ] 历史观点 
      - [ ] 程序编码
      - [ ] 数据格式
@@ -57,7 +57,7 @@
      - [ ] 现实生活: 性能提高技术
      - [ ] 确认和消除性能瓶颈
      - [ ] 小结
-   - chapter 6 存储器层次结构 [/]
+   - chapter 6 存储器层次结构 [0/8]
      - [ ] 存储技术
      - [ ] 局限性
      - [ ] 存储器层次结构
@@ -66,7 +66,7 @@
      - [ ] 综合: 高速缓存对程序性能的影响
      - [ ] 综合: 利用程序中的局限性
      - [ ] 小结
-   - chapter 7 链接 [/]
+   - chapter 7 链接 [0/14]
      - [ ] 编译器驱动程序
      - [ ] 静态链接
      - [ ] 目标文件
@@ -81,7 +81,7 @@
      - [ ] * 与位置无关的代码(PIC)
      - [ ] 处理目标文件的工具
      - [ ] 小结
-   - chapter 8 异常控制流[/]
+   - chapter 8 异常控制流[0/8]
      - [ ] 异常
      - [ ] 进程
      - [ ] 系统调用和错误处理
@@ -90,7 +90,7 @@
      - [ ] 非本地跳转
      - [ ] 操作进程的工具
      - [ ] 小结
-   - chapter 9 测量程序执行时间 [/]
+   - chapter 9 测量程序执行时间 [0/10]
      - [ ] 计算机系统上的时间流
      - [ ] 通过间隔计数 (interval counting) 来测量时间
      - [ ] 周期计数器
@@ -101,7 +101,7 @@
      - [ ] 现实生活: K次最优测量方法
      - [ ] 得到的经验教训
      - [ ] 小结
-   - chapter 10 虚拟存储器 [/]
+   - chapter 10 虚拟存储器 [0/13]
      - [ ] 物理和虚拟寻址
      - [ ] 地址空间
      - [ ] 虚拟存储器作为缓存的工具
@@ -133,9 +133,14 @@
      - [ ] WEB 服务器
      - [ ] 综合: Tiny Web 服务器
      - [ ] 小结
-   - chapter 13 : 并发编程. [0/7]
-     - [ ] 基于进程的并发编程
-     - [ ] 基于 I/O 多路复用的并发编程
+   - chapter 13 : 并发编程. [2/7]
+     - [X] 基于进程的并发编程
+       为什么会考虑并发编程.
+	多用户|访问慢设备|
+     - [X] 基于 I/O 多路复用的并发编程
+       fd_set 设置一个文件描述符的集合. 然后并且select 之.
+       任何一个集合当中的文件描述符 ready 了之后就会通知并启动一个状态机
+       进行处理.
      - [ ] 多线程程序中的共享变量
      - [ ] 用信号量同步线程
      - [ ] 综合： 基于预线程化的并发服务器
@@ -156,27 +161,35 @@
    - 第二章 词法分析
      
 ** 《旅行人生最有价值的投资》   - Jim Rogers
-   - 第一篇 从顿琴到东京 [0/10]
-     - [ ] 飞向苏联
-     - [ ] 纽约
-     - [ ] 穿越欧洲
-     - [ ] 林茨
-     - [ ] 中欧
-     - [ ] 前往伊斯坦布尔
-     - [ ] 古老的土耳其斯坦
-     - [ ] 进入中国
-     - [ ] 西安
-     - [ ] 从西安到北京
-   - 第二篇 从东京到顿琴 [0/0]
-     - [ ] 日本: 值得投资的国家
-     - [ ] 在世界的边缘
-     - [ ] 穿越蛮荒之地
+   - 第一篇 从顿琴到东京 [10/10]
+     - [X] 飞向苏联
+     - [X] 纽约
+     - [X] 穿越欧洲
+     - [X] 林茨
+     - [X] 中欧
+     - [X] 前往伊斯坦布尔
+     - [X] 古老的土耳其斯坦
+     - [X] 进入中国
+     - [X] 西安
+     - [X] 从西安到北京
+   - 第二篇 从东京到顿琴 [3/8]
+     - [X] 日本: 值得投资的国家
+       俄罗斯和南非是产金的大国. 这两个国家经济已经开始发展，如果全球恢复金本位
+       那是否意味着这两个国家会更加富有。
+       作者关于金本位的质疑:
+       1. 金本位对政客的约束可能会导致政客马上会将金本位作为替罪羊废除金本位
+       2. 当经济发展的时候政客会对黄金参水. 
+
+	  作者还提出关于金本位的解决办法..简单的取消硬通货的资本利得税. 具体原因
+	  也搞不明柏为什么.
+     - [X] 在世界的边缘
+     - [X] 穿越蛮荒之地
      - [ ] 西伯利亚
      - [ ] 乌兰乌德，济马和坎斯克
      - [ ] 新西伯利亚及其以西
      - [ ] 莫斯科
      - [ ] 前往爱尔兰
-   - 第三篇 从顿琴到好望角 [/]
+   - 第三篇 从顿琴到好望角 [0/8]
      - [ ] 非洲： 征服撒哈啦
      - [ ] 撒哈啦以南
      - [ ] 顺河而下
