--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -1,13 +1,12 @@
-| date in | currency | ent. | s(l/p) | profit | total |
-|         |          |      |        |        |       |
+(+ 14719.23 8389.59)
+|       date | currency |   ent. |    tp. | profit |
+| 2011-10-10 | usdchf   | 0.9182 | 0.9130 |   -170 |
+| 2011-10-11 | audusd   | 0.9936 | 0.9876 |     16 |
+| 2011-10.13 | eurusd   | 1.3763 | 1.3700 |   -378 |
+|------------+----------+--------+--------+--------|
+|      total |          |        |        |   -532 |
+#+TBLFM: $LR5=vsum(@2$5..@-1$5)
 
-| currency |    sl. |    en. |    sp. | b/s | lots | point  |  profit |
-|----------+--------+--------+--------+-----+------+--------+---------|
-| usdchf   | 0.9130 | 0.9182 | 0.9310 | s   |  0.3 | 51.9   | -170.87 |
-| audusd   | 0.9936 |        |        |     |      |        |         |
-|          |        |        |        |     |      | #ERROR |         |
-#+TBLFM: $7='(if (< $8 0) (- $3 $2));N
-  
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
   :LOGBOOK:
   CLOCK: [2011-10-09 Sun 16:26]--[2011-10-09 Sun 17:03] =>  0:37
