--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -1,10 +1,11 @@
 (+ 14719.23 8389.59)
 |       date | currency |   ent. |    tp. | profit |
+|  2011-9-29 | audusd   | 0.9831 | 0.9830 |  421.6 |
 | 2011-10-10 | usdchf   | 0.9182 | 0.9130 |   -170 |
 | 2011-10-11 | audusd   | 0.9936 | 0.9876 |     16 |
 | 2011-10.13 | eurusd   | 1.3763 | 1.3700 |   -378 |
 |------------+----------+--------+--------+--------|
-|      total |          |        |        |   -532 |
+|      total |          |        |        | -110.4 |
 #+TBLFM: $LR5=vsum(@2$5..@-1$5)
 
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
