--- a/org/reading.org
+++ b/org/reading.org
@@ -160,6 +160,8 @@
      - [ ] TINY 样本语言与编译器
    - 第二章 词法分析
      
+** 《黑客与画家》
+   - 第一章
 ** 《旅行人生最有价值的投资》   - Jim Rogers
    - 第一篇 从顿琴到东京 [10/10]
      - [X] 飞向苏联
@@ -227,3 +229,4 @@
      - [ ] 安乐
      - [ ] 从玉树说起
        
+
