--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -1,11 +1,11 @@
-(+ 14719.23 8389.59)
-|       date | currency |   ent. |    tp. | profit |
-|  2011-9-29 | audusd   | 0.9831 | 0.9830 |  421.6 |
-| 2011-10-10 | usdchf   | 0.9182 | 0.9130 |   -170 |
-| 2011-10-11 | audusd   | 0.9936 | 0.9876 |     16 |
-| 2011-10.13 | eurusd   | 1.3763 | 1.3700 |   -378 |
-|------------+----------+--------+--------+--------|
-|      total |          |        |        | -110.4 |
+(- (+ (- (+ (+ 14719.23 8389.59) 378) 16) 170) 421.6)
+|       date | currency |   ent. |    tp. | profit |    total |
+|  2011-9-29 | audusd   | 0.9831 | 0.9830 |  421.6 | 23219.22 |
+| 2011-10-10 | usdchf   | 0.9182 | 0.9130 |   -170 |          |
+| 2011-10-11 | audusd   | 0.9936 | 0.9876 |     16 |          |
+| 2011-10.13 | eurusd   | 1.3763 | 1.3700 |   -378 |          |
+|------------+----------+--------+--------+--------+----------|
+|      total |          |        |        | -110.4 |          |
 #+TBLFM: $LR5=vsum(@2$5..@-1$5)
 
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
@@ -140,3 +140,60 @@ xb15m:阻:[eur:1.3479 ] [gbp:1.5609 ] [chf:0.8950 ] [aud:0.9837 ] [cad:1.0279 ] 
 >aud jpy >eur gbp chf >cad >>
 
 澳元： 注意三角形和旗型机会. 下午3点的时候关注三角形机会.
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  :END:
+[2011-10-17 Mon 10:42]
+
+Next: 交易币种初选  交易计划模板  Prev: 交易计划模板  
+
+ 市场整体情况(美元指数分析)
+
+*美元指数分析
+   ---------------usdx---------------------
+时间及别  | 1月 | 1周 | 1日 | 4时 | 1时 | 1刻 | 
+   ----------------------------------------
+ 客 : |[ 下 ]|[ 转 ]|[ 上 ]|[ 下 ]|[ 下 ]|[ NA ]
+ 主 : |[ 上 ]|[ 星 ]|[ 星 ]|[ 下 ]|[ 下 ]|[ NA ]
+   ----------------------------------------
+
+*结论
+
+美元(day)指数: 客观均线中的55日均线支撑了汇价，但是目前来看美元指数高位主主交替.                 
+美元(4hr)指数: 下跌趋势已定，目标直指日图关键支撑76.02                             
+美元(1hr)指数: 日内依然保持下跌走势不变                                       
+美元(15m)指数:                                                    
+
+*货币分化表
+ 
+  ------------------------------------
+4hr:客:[eur:   上  ] [gbp:   上  ] [chf:   上  ] [aud:   上  ] [cad:   上  ] [jpy:   转  ]  
+4hr:主:[eur:   上  ] [gbp:   上  ] [chf:   上  ] [aud:   上  ] [cad:   上  ] [jpy:   星  ]  
+4hr:规:[eur:   nc  ] [gbp:   nc  ] [chf:   nc  ] [aud:   nc  ] [cad:   nc  ] [jpy:   nc  ]  
+4hr:阻:[eur:1.3943 ] [gbp:1.6098 ] [chf:0.8685 ] [aud:0.0000 ] [cad:0.9871 ] [jpy:76.6400 ]  
+4hr:撑:[eur:1.3656 ] [gbp:1.5650 ] [chf:0.9052 ] [aud:0.0000 ] [cad:1.0279 ] [jpy:77.7600 ]  
+  ------------------------------------
+1hr:客:[eur:   上  ] [gbp:   上  ] [chf:   上  ] [aud:   上  ] [cad:   上  ] [jpy:   下  ]  
+1hr:主:[eur:   上  ] [gbp:   上  ] [chf:   上  ] [aud:   上  ] [cad:   上  ] [jpy:   下  ]  
+1hr:规:[eur:   zc  ] [gbp:   zc  ] [chf:   zc  ] [aud:   nc  ] [cad:   nc  ] [jpy:   nc  ]  
+1hr:阻:[eur:0.0000 ] [gbp:0.0000 ] [chf:0.0000 ] [aud:0.0000 ] [cad:0.0000 ] [jpy:0.0000 ]  
+1hr:撑:[eur:1.3779 ] [gbp:1.5714 ] [chf:0.9024 ] [aud:0.0000 ] [cad:1.0164 ] [jpy:0.0000 ]  
+  ------------------------------------
+15m:客:[eur:   NA  ] [gbp:   NA  ] [chf:   NA  ] [aud:   NA  ] [cad:   NA  ] [jpy:   NA  ]  
+15m:主:[eur:   NA  ] [gbp:   NA  ] [chf:   NA  ] [aud:   NA  ] [cad:   NA  ] [jpy:   NA  ]  
+15m:规:[eur:   NA  ] [gbp:   NA  ] [chf:   NA  ] [aud:   NA  ] [cad:   NA  ] [jpy:   NA  ]  
+15m:阻:[eur:1.3479 ] [gbp:1.5609 ] [chf:0.8950 ] [aud:0.9837 ] [cad:1.0279 ] [jpy:0.0000 ]  
+15m:撑:[eur:1.3635 ] [gbp:1.5524 ] [chf:0.9021 ] [aud:0.0000 ] [cad:0.0000 ] [jpy:0.0000 ] 
+
+*分化结论
+
+4hr分化: 一致上涨除了日元看不清.                                       
+1hr分化: 一致上涨除了日元看不清.                                       
+15m分化:                                                    
+
+*日内强弱选择
+[eur] [gbp] [chf] [aud] [cad] [jpy] 
+
+>eur chf aud cad >gbp >>jpy >
+
+今日选择做多欧元. 1等模型
