--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,6 +2,7 @@
 * Tasks
 ** Organization
    :LOGBOOK:
+   CLOCK: [2011-10-14 Fri 12:23]
    CLOCK: [2011-10-12 Wed 10:05]--[2011-10-12 Wed 10:16] =>  0:11
    CLOCK: [2011-10-12 三 08:52]--[2011-10-12 Wed 10:05] =>  1:13
    CLOCK: [2011-10-11 Tue 10:05]--[2011-10-12 三 07:50] => 21:45
