--- a/org/reading.org
+++ b/org/reading.org
@@ -174,7 +174,7 @@
      - [X] 进入中国
      - [X] 西安
      - [X] 从西安到北京
-   - 第二篇 从东京到顿琴 [3/8]
+   - 第二篇 从东京到顿琴 [8/8]
      - [X] 日本: 值得投资的国家
        俄罗斯和南非是产金的大国. 这两个国家经济已经开始发展，如果全球恢复金本位
        那是否意味着这两个国家会更加富有。
@@ -186,13 +186,13 @@
 	  也搞不明柏为什么.
      - [X] 在世界的边缘
      - [X] 穿越蛮荒之地
-     - [ ] 西伯利亚
-     - [ ] 乌兰乌德，济马和坎斯克
-     - [ ] 新西伯利亚及其以西
-     - [ ] 莫斯科
-     - [ ] 前往爱尔兰
-   - 第三篇 从顿琴到好望角 [0/8]
-     - [ ] 非洲： 征服撒哈啦
+     - [X] 西伯利亚
+     - [X] 乌兰乌德，济马和坎斯克
+     - [X] 新西伯利亚及其以西
+     - [X] 莫斯科
+     - [X] 前往爱尔兰
+   - 第三篇 从顿琴到好望角 [1/8]
+     - [X] 非洲： 征服撒哈啦
      - [ ] 撒哈啦以南
      - [ ] 顺河而下
      - [ ] 愤怒的羔羊
