--- a/org/refile.org
+++ b/org/refile.org
@@ -143,3 +143,16 @@ https://shares.alibaba.com/shares/user/clientPassWord.action?encryptUserName=D94
 [2011-10-17 Mon 11:59]
 [[file:~/org/reading.org::*%E3%80%8A%E6%97%85%E8%A1%8C%E4%BA%BA%E7%94%9F%E6%9C%80%E6%9C%89%E4%BB%B7%E5%80%BC%E7%9A%84%E6%8A%95%E8%B5%84%E3%80%8B%20-%20Jim%20Rogers][《旅行人生最有价值的投资》   - Jim Rogers]]
 	统一使用 supervisersync.noarch
+* TODO gemserver.rsync 
+  :LOGBOOK:
+  CLOCK: [2011-10-17 Mon 12:00]
+  :END:
+[2011-10-17 Mon 12:00]
+[[file:~/org/reading.org::*%E3%80%8A%E6%97%85%E8%A1%8C%E4%BA%BA%E7%94%9F%E6%9C%80%E6%9C%89%E4%BB%B7%E5%80%BC%E7%9A%84%E6%8A%95%E8%B5%84%E3%80%8B%20-%20Jim%20Rogers][《旅行人生最有价值的投资》   - Jim Rogers]]
+
+@400000004e9b9fa02597f084 WARN: verification: setting symlink /home/gemserver -> /home/gemserver.rsync/current
+@400000004e9b9fa025981f64 WARN: verification: could not symlink /home/gemserver -> /home/gemserver.rsync/current
+@400000004e9b9fa02598a04c WARN: verification: director /home/gemserver 0755 root root
+
+gemserver.rsync 是从哪里rsync 的？
+
