--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -158,7 +158,7 @@ Next: 交易币种初选  交易计划模板  Prev: 交易计划模板
    ----------------------------------------
 
 *结论
-
+ 
 美元(day)指数: 客观均线中的55日均线支撑了汇价，但是目前来看美元指数高位主主交替.                 
 美元(4hr)指数: 下跌趋势已定，目标直指日图关键支撑76.02                             
 美元(1hr)指数: 日内依然保持下跌走势不变                                       
@@ -203,3 +203,4 @@ Next: 交易币种初选  交易计划模板  Prev: 交易计划模板
   :END:
 [2011-10-18 Tue 09:27]
 
+macd 反弹模型.
