--- a/org/refile.org
+++ b/org/refile.org
@@ -145,7 +145,7 @@ https://shares.alibaba.com/shares/user/clientPassWord.action?encryptUserName=D94
 	统一使用 supervisersync.noarch
 * TODO gemserver.rsync 
   :LOGBOOK:
-  CLOCK: [2011-10-17 Mon 12:00]
+  CLOCK: [2011-10-17 Mon 12:00]--[2011-10-18 Tue 09:27] => 21:27
   :END:
 [2011-10-17 Mon 12:00]
 [[file:~/org/reading.org::*%E3%80%8A%E6%97%85%E8%A1%8C%E4%BA%BA%E7%94%9F%E6%9C%80%E6%9C%89%E4%BB%B7%E5%80%BC%E7%9A%84%E6%8A%95%E8%B5%84%E3%80%8B%20-%20Jim%20Rogers][《旅行人生最有价值的投资》   - Jim Rogers]]
